--- a/portal-frontend/src/styles/dialog.scss
+++ b/portal-frontend/src/styles/dialog.scss
@@ -2,5 +2,13 @@
   display: flex;
   position: absolute;
   z-index: 1000;
-  overflow: auto;
+}
+
+.mat-mdc-dialog-container .mdc-dialog__surface {
+  overflow-y: scroll;
+  max-height: 100vh !important;
+}
+
+.cdk-global-scrollblock {
+  overflow-y: hidden;
 }
