--- a/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.scss
+++ b/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.scss
@@ -49,10 +49,12 @@ a {
   display: flex;
   align-items: center;
   flex-wrap: wrap;
+  margin-bottom: rem(8);
 
   .file-name {
     display: flex;
     justify-content: space-between;
+    width: 100%;
   }
 
   button {
@@ -75,6 +77,7 @@ a {
       display: flex;
       align-items: center;
       justify-content: flex-start;
+      width: unset;
     }
   }
 }
