Make owners only save on parcel when parcel saves
* Change code to no longer re-load the application but just owners
* Only link owners to parcels when pressing save

--- a/portal-frontend/src/app/features/edit-application/parcel-details/application-owners-dialog/application-owners-dialog.component.html
+++ b/portal-frontend/src/app/features/edit-application/parcel-details/application-owners-dialog/application-owners-dialog.component.html
@@ -3,7 +3,7 @@
 </div>
 <div mat-dialog-content>
   <div>
-    <app-parcel-owners (onAppUpdated)='onUpdated()' [owners]="owners"></app-parcel-owners>
+    <app-parcel-owners (onOwnersUpdated)='onUpdated()' [owners]="owners"></app-parcel-owners>
   </div>
 </div>
 <div mat-dialog-actions>
