--- a/portal-frontend/src/app/features/edit-application/parcel-details/parcel-details.component.html
+++ b/portal-frontend/src/app/features/edit-application/parcel-details/parcel-details.component.html
@@ -17,7 +17,7 @@
       [fileId]='fileId'
       (onFormGroupChange)="onParcelFormChange($event)"
       (onFilesUpdated)="onFilesUpdated()"
-      (onAppUpdated)='onAppUpdated()'
+      (onOwnersUpdated)='onOwnersUpdated()'
     ></app-parcel-entry>
 
     <div>
