minor update to modification, alcs package update

--- a/alcs-frontend/src/app/features/board/dialogs/modification/modification-dialog.component.html
+++ b/alcs-frontend/src/app/features/board/dialogs/modification/modification-dialog.component.html
@@ -7,7 +7,7 @@
   <div class="header-row">
     <div class="left">
       <h3 class="card-title center">
-        {{ cardTitle }}
+        <span class="margin-right">{{ cardTitle }}</span>
         <div class="labels">
           <app-application-type-pill [type]="modification.application.type"></app-application-type-pill>
           <app-application-type-pill [type]="modificationType"></app-application-type-pill>
