--- a/alcs-frontend/src/app/features/admin/stat-holiday/stat-holiday.component.html
+++ b/alcs-frontend/src/app/features/admin/stat-holiday/stat-holiday.component.html
@@ -1,1 +1,30 @@
-<p>stat-holiday works!</p>
+<div>
+  <mat-form-field>
+    <mat-label>Enter year</mat-label>
+    <input matInput placeholder="Ex. 2023" type="number" [(ngModel)]="search" />
+  </mat-form-field>
+  <button mat-flat-button color="primary" (click)="fetch()">Search</button>
+</div>
+
+<table mat-table [dataSource]="holidays">
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+  <ng-container matColumnDef="name">
+    <th mat-header-cell *matHeaderCellDef>Name</th>
+    <td mat-cell *matCellDef="let row">{{ row.name }}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="day">
+    <th mat-header-cell *matHeaderCellDef>Date</th>
+    <td mat-cell *matCellDef="let row">{{ row.day | date }}</td>
+  </ng-container>
+</table>
+
+<mat-paginator
+  [length]="total"
+  [pageSize]="20"
+  [pageSizeOptions]="[20, 50, 100]"
+  (page)="onPageChange($event)"
+  aria-label="Select page of holidays"
+></mat-paginator>
