ALCS-100 Bug Fixes
* Add new text when user has not answered step2/3 questions for step 4
* Fix errors for step 2/3 first questions
* stop angular from moving the icon to the left of the button by wrapping it in a div

--- a/portal-frontend/src/app/features/view-application/view-application.component.html
+++ b/portal-frontend/src/app/features/view-application/view-application.component.html
@@ -49,7 +49,9 @@
 </div>
 <div *ngIf="application && application.canEdit" class="action-bar">
   <button [routerLink]="'/application/' + application.fileNumber + '/edit'" mat-button>
-    <span class="subheading2">Continue Application</span>
-    <mat-icon>keyboard_double_arrow_right</mat-icon>
+    <div>
+      <span class="subheading2">Continue Application </span>
+      <mat-icon>keyboard_double_arrow_right</mat-icon>
+    </div>
   </button>
 </div>
