--- a/portal-frontend/src/app/features/view-application/view-application.component.scss
+++ b/portal-frontend/src/app/features/view-application/view-application.component.scss
@@ -41,16 +41,22 @@
   width: 100%;
   background-color: $primary-color-light;
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
   height: rem(56);
 
-  button {
-    width: 100%;
-    height: 100%;
-  }
+  div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-  .mat-icon {
-    margin-left: rem(6);
+    button {
+      width: 100%;
+      height: 100%;
+    }
+
+    .mat-icon {
+      margin-left: rem(6);
+    }
   }
 }
