--- a/portal-frontend/src/app/features/review-application/review-contact-information/review-contact-information.component.html
+++ b/portal-frontend/src/app/features/review-application/review-contact-information/review-contact-information.component.html
@@ -26,7 +26,7 @@
         <div>
           <label for="last-name">Last Name</label>
           <mat-form-field class="input" appearance="outline">
-            <input id="last-name" matInput placeholder="Type first name" formControlName="lastName" />
+            <input id="last-name" matInput placeholder="Type last name" formControlName="lastName" />
           </mat-form-field>
         </div>
         <div>
