--- a/portal-frontend/src/app/features/review-application/review-submit-fng/review-submit-fng.component.html
+++ b/portal-frontend/src/app/features/review-application/review-submit-fng/review-submit-fng.component.html
@@ -68,7 +68,9 @@
         <div class="full-width">
           <div class="subheading2">Resolution for Application to Proceed to the ALC</div>
           <div>
-            {{ _applicationReview.isAuthorized ? 'Yes' : 'No' }}
+            <span *ngIf="_applicationReview.isAuthorized !== null">{{
+              _applicationReview.isAuthorized ? 'Authorized' : 'Refuse to Authorize'
+            }}</span>
             <app-no-data [showRequired]="showErrors" *ngIf="_applicationReview.isAuthorized === null"></app-no-data>
           </div>
         </div>
@@ -92,9 +94,10 @@
         <div>
           <div class="subheading2">Other Attachments (optional):</div>
           <div>
-            <a class="link" (click)="openFile(document.uuid)" *ngFor="let document of otherAttachments">{{
-              document.fileName
-            }}</a>
+            <div class="document" *ngFor="let document of otherAttachments">
+              <a class="link" (click)="openFile(document.uuid)">{{ document.fileName }}</a>
+            </div>
+            <app-no-data *ngIf="otherAttachments.length === 0"></app-no-data>
           </div>
         </div>
         <div class="edit-button">
