--- a/portal-frontend/src/app/features/review-application/review-submit-fng/review-submit-fng.component.scss
+++ b/portal-frontend/src/app/features/review-application/review-submit-fng/review-submit-fng.component.scss
@@ -15,6 +15,10 @@ section {
   cursor: pointer;
 }
 
+.document {
+  margin-bottom: rem(8);
+}
+
 :host::ng-deep {
   .mat-expansion-panel {
     box-shadow: none;
