--- a/portal-frontend/src/app/features/review-application/review-submit/review-submit.component.html
+++ b/portal-frontend/src/app/features/review-application/review-submit/review-submit.component.html
@@ -212,7 +212,7 @@
         <div class="full-width">
           <div class="subheading2">Other Attachments (optional):</div>
           <div>
-            <div class='document' *ngFor="let document of otherAttachments">
+            <div class="document" *ngFor="let document of otherAttachments">
               <a class="link" (click)="openFile(document.uuid)">{{ document.fileName }}</a>
             </div>
             <app-no-data *ngIf="otherAttachments.length === 0"></app-no-data>
@@ -387,19 +387,32 @@
         <h4>4. Resolution</h4>
       </mat-expansion-panel-header>
       <div class="review-table">
-        <div class="full-width" *ngIf="!_applicationReview.isFirstNationGovernment && (_applicationReview.isOCPDesignation === null || _applicationReview.isSubjectToZoning === null)">
+        <div
+          class="full-width"
+          *ngIf="
+            !_applicationReview.isFirstNationGovernment &&
+            (_applicationReview.isOCPDesignation === null || _applicationReview.isSubjectToZoning === null)
+          "
+        >
           Please complete both Step 2 Plans & Bylaws: OCP and Step 3 Plans & Bylaws: Zoning to continue with this step.
         </div>
-        <div class="full-width" *ngIf="!_applicationReview.isFirstNationGovernment && _applicationReview.isOCPDesignation === false && _applicationReview.isSubjectToZoning === false">
-          By indicating that the parcel(s) is not subject to Local Government OCP or Zoning, no authorizing resolution is
-          required as per S. 25 (3) or S. 29 (4) of the ALC Act. The only option available to you is to forward this
+        <div
+          class="full-width"
+          *ngIf="
+            !_applicationReview.isFirstNationGovernment &&
+            _applicationReview.isOCPDesignation === false &&
+            _applicationReview.isSubjectToZoning === false
+          "
+        >
+          By indicating that the parcel(s) is not subject to Local Government OCP or Zoning, no authorizing resolution
+          is required as per S. 25 (3) or S. 29 (4) of the ALC Act. The only option available to you is to forward this
           application on to the ALC.
         </div>
         <div *ngIf="_applicationReview.isOCPDesignation || _applicationReview.isSubjectToZoning" class="full-width">
           <div class="subheading2">Resolution for Application to Proceed to the ALC</div>
           <div>
             <span *ngIf="_applicationReview.isAuthorized !== null">{{
-              _applicationReview.isAuthorized ? 'Yes' : 'No'
+              _applicationReview.isAuthorized ? 'Authorized' : 'Refuse to Authorize'
             }}</span>
             <app-no-data [showRequired]="showErrors" *ngIf="_applicationReview.isAuthorized === null"></app-no-data>
           </div>
@@ -440,7 +453,7 @@
         <div class="full-width">
           <div class="subheading2">Other Attachments (optional):</div>
           <div>
-            <div class='document' *ngFor="let document of otherAttachments">
+            <div class="document" *ngFor="let document of otherAttachments">
               <a class="link" (click)="openFile(document.uuid)">{{ document.fileName }}</a>
             </div>
             <app-no-data *ngIf="otherAttachments.length === 0"></app-no-data>
