File Upload Fixes
* Add previous step to all existing steps missing it
* Save before adding/removing files

--- a/portal-frontend/src/app/features/edit-application/edit-application.component.scss
+++ b/portal-frontend/src/app/features/edit-application/edit-application.component.scss
@@ -160,6 +160,7 @@
 
     .button-container {
       margin-top: rem(40);
+      margin-bottom: rem(24);
       display: flex;
       flex-direction: column-reverse;
       justify-content: space-between;
