--- a/portal-frontend/src/app/features/edit-application/parcel-details/parcel-details.component.html
+++ b/portal-frontend/src/app/features/edit-application/parcel-details/parcel-details.component.html
@@ -45,6 +45,7 @@
   <div class="button-container">
     <button (click)="onSaveExit()" mat-stroked-button color="accent">Save and Exit</button>
     <div>
+      <div></div>
       <button (click)="onSave()" mat-flat-button matStepperNext color="primary">
         Next<span class="mobile-hidden"> Step</span>
       </button>
