--- a/portal-frontend/src/app/features/edit-application/nfu/nfu-proposal/nfu-proposal.component.html
+++ b/portal-frontend/src/app/features/edit-application/nfu/nfu-proposal/nfu-proposal.component.html
@@ -185,5 +185,12 @@
 </form>
 <div class="button-container">
   <button (click)="onSaveExit()" mat-stroked-button color="accent">Save and Exit</button>
-  <button (click)="onSave()" mat-flat-button matStepperNext color="primary">Next Step</button>
+  <div>
+    <button (click)="onSave()" mat-stroked-button matStepperPrevious color="primary">
+      Previous<span class="mobile-hidden"> Step</span>
+    </button>
+    <button (click)="onSave()" mat-flat-button matStepperNext color="primary">
+      Next<span class="mobile-hidden"> Step</span>
+    </button>
+  </div>
 </div>
