--- a/alcs-frontend/src/app/features/admin/stat-holiday/stat-holiday.component.html
+++ b/alcs-frontend/src/app/features/admin/stat-holiday/stat-holiday.component.html
@@ -35,7 +35,7 @@
           <mat-icon>edit</mat-icon>
         </button>
         <button class="delete-btn" mat-flat-button (click)="onDelete(row)">
-          <mat-icon style="color: red">delete-outlined</mat-icon>
+          <mat-icon>delete-outlined</mat-icon>
         </button>
       </td>
     </ng-container>
