--- a/portal-frontend/src/app/features/edit-application/edit-application.component.scss
+++ b/portal-frontend/src/app/features/edit-application/edit-application.component.scss
@@ -276,4 +276,10 @@
     justify-content: space-evenly;
     flex-wrap: wrap;
   }
+  
+  .flex-space-between-wrap {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
 }
