Add Primary Contact Page

--- a/portal-frontend/src/app/features/edit-application/edit-application.component.html
+++ b/portal-frontend/src/app/features/edit-application/edit-application.component.html
@@ -21,7 +21,7 @@
   </mat-step>
   <mat-step label="Primary Contact">
     <ng-container *ngTemplateOutlet="header"></ng-container>
-    <p>Primary Contact</p>
+    <app-primary-contact [$application]="$application"></app-primary-contact>
   </mat-step>
   <mat-step label="Government">
     <ng-container *ngTemplateOutlet="header"></ng-container>
