--- a/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.scss
+++ b/portal-frontend/src/app/shared/file-drag-drop/file-drag-drop.component.scss
@@ -12,6 +12,10 @@
   display: none;
 }
 
+.desktop-file-drag-drop[ng-reflect-disabled="true"] {
+  background-color: #cbc9c9 !important;
+}
+
 .mobile-file-drag-drop {
   width: 100%;
 }
